--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.5.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
+		<properties>
+		    <log4j2.version>2.15.0</log4j2.version>
+		</properties>
 	</parent>
 
 	<groupId>com.devsecops</groupId>
