--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	    <log4j2.version>2.15.0</log4j2.version>
+	    <tomcat-embed-core.version>9.0.43</tomcat-embed-core.version>
 	</properties>
 
 	<dependencies>
