--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-autoconfigure</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
+		<dependency>
 		   <groupId>org.springdoc</groupId>
 		   <artifactId>springdoc-openapi-ui</artifactId>
 		   <version>1.2.30</version>
