--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	    <log4j2.version>2.15.0</log4j2.version>
-	    <tomcat-embed-core.version>9.0.43</tomcat-embed-core.version>
+	    <tomcat.version>9.0.43</tomcat.version>
 	</properties>
 
 	<dependencies>
@@ -38,11 +38,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-autoconfigure</artifactId>
-		    <version>2.6.1</version>
 		</dependency>
 		<dependency>
 		   <groupId>org.springdoc</groupId>
